Bug 4952 - Fix eplace layout problems caused by the fix for bug 4940.

--- a/src/om/stdcomponent/EquationComponent.css
+++ b/src/om/stdcomponent/EquationComponent.css
@@ -5,7 +5,10 @@
 .om .equation .placeholder
 {
   position:absolute;
+  top: 0;
+  left: 0;
   font-size:%%SIZE:13px%%;
+  visibility:hidden;
 }
 .om .equation img /* bit dodgy */
 {
